# educe

./: t_rec.c  t_rec_binary.c
Seg3D/src/Core/Algorithms/Fields/: ApplyDilateFilterToFieldData.h  ApplyMappingMatrix.h  ApplyTriSurfPhaseFilter.h  CMakeLists.txt  CalculateFieldDataCompiled.cc  CalculateIsInsideField.h  ClearAndChangeFieldBasis.cc  ClearAndChangeFieldBasis.h  ClipAtIndeces.cc  ClipBySelectionMask.cc  ClipBySelectionMask.h  ClipFieldByFunction.cc  ClipFieldByFunction.h  ClipFieldWithSeed.cc  ClipFieldWithSeed.h  CollectPointClouds.cc  CollectPointClouds.h  ConvertIndicesToFieldData.cc  ConvertIndicesToFieldData.h  ConvertMappingMatrixToFieldData.h  ConvertMeshToIrregularMesh.h  ConvertMeshToTetVol.cc  ConvertMeshToTriSurf.cc  ConvertMeshToTriSurf.h  ConvertMeshToUnstructuredMesh.cc  ConvertMeshToUnstructuredMesh.h  CreateFieldFromMesh.cc  CreateLinkBetweenMeshAndCompGrid.cc  CreateLinkBetweenMeshAndCompGrid.h  CreateLinkBetweenMeshAndCompGridByDomain.cc  CreateMeshFromNrrd.h  DistanceField.h  FieldsAlgo.cc  FieldsAlgo.h  FindClosestNode.cc  FindClosestNodeByValue.cc  FindClosestNodeByValue.h  GatherFields.h  GetBoundingBox.h  GetFieldData.cc  (+24 more)
Seg3D/src/Core/Algorithms/Interface/: CMakeLists.txt
Seg3D/src/Core/Datatypes/: Bundle.cc  Bundle.h  CMakeLists.txt  CastFData.h  Clipper.h  Color.cc  Color.h  ColorMap.cc  ColorMap.h  ColumnMatrix.cc  ColumnMatrix.h  CurveMesh.cc  CurveMesh.h  Datatype.h  DenseColMajMatrix.cc  DenseColMajMatrix.h  DenseMatrix.cc  DenseMatrix.h  Field.cc  Field.h  FieldAlgo.h  FieldIndex.h  FieldInformation.cc  FieldInformation.h  FieldInterfaceAux.h  FieldRNG.cc  FieldVIndex.h  GenericField.h  HexVolMesh.cc  HexVolMesh.h  ITKDatatype.cc  ImageMesh.cc  ImageMesh.h  LatVolMesh.cc  LatVolMesh.h  Material.cc  Material.h  Matrix.cc  Matrix.h  MatrixOperations.cc  (+56 more)
Seg3D/src/Dataflow/Modules/Fields/: AlignMeshBoundingBoxes.cc  ApplyFilterToFieldData.cc  ApplyMappingMatrix.cc  ApplyTriSurfPhaseFilter.cc  BuildMappingMatrix.cc  BuildMatrixOfSurfaceNormals.cc  BuildMatrixOfSurfaceNormals.h  BuildPointCloudToLatVolMappingMatrix.cc  CMakeLists.txt  CalculateDistanceToField.cc  CalculateDistanceToFieldBoundary.cc  CalculateFieldData.cc  CalculateFieldData2.cc  CalculateFieldData3.cc  CalculateFieldDataCompiled.cc  CalculateGradients.cc  CalculateGradients.h  CalculateInsideWhichField.cc  CalculateIsInsideField.cc  CalculateLatVolGradientsAtNodes.cc  CalculateLatVolGradientsAtNodes.h  CalculateMeshNodes.cc  CalculateNodeNormals.cc  CalculateSignedDistanceToField.cc  CalculateVectorMagnitudes.cc  CleanupTetMesh.cc  ClipFieldByFunction.cc  ClipFieldByFunction2.cc  ClipFieldByFunction3.cc  ClipFieldByFunctionCompiled.cc  ClipFieldByMesh.cc  ClipFieldToFieldOrWidget.cc  (+107 more)
Seg3D/src/DynamicModules/: CMakeLists.txt
Seg3D/src/DynamicModules/files/: ALGOArryEngn_532229600_LCELID_FS.cc  ALGOArryEngn_936873123_LCELID_FS.cc  ALGOArryObjctFldCrtAlgT.GFldLtVlMhHxTLLgnPtHxTLLgndblFDt3ddblLtVlMhHxTLLgnPt.cc  ALGOArryObjctFldDtSclrAlgT.GFldLtVlMhHxTLLgnPtHxTLLgndblFDt3ddblLtVlMhHxTLLgnPt.LtVlMhHxTLLgnPtNd.cc  ALGOArryObjctFldElmPtAlgT.GFldLtVlMhHxTLLgnPtHxTLLgndblFDt3ddblLtVlMhHxTLLgnPt.cc  ALGOArryObjctFldLctnNdAlgT.GFldLtVlMhHxTLLgnPtHxTLLgndblFDt3ddblLtVlMhHxTLLgnPt.LtVlMhHxTLLgnPtNd.cc  MpFldDtFrmSrcTDstntnAlgT.GFldLtVlMhHxTLLgnPtHxTLLgndblFDt3ddblLtVlMhHxTLLgnPt.LtVlMhHxTLLgnPtNd.GFldTrSrfMhTrLnrLgnPtTrLnrLgndblvctrdbl.TrSrfMhTrLnrLgnPtNd.cc  MrchngCbs.GFldLtVlMhHxTLLgnPtHxTLLgndblFDt3ddblLtVlMhHxTLLgnPt.cc  SFIntrfcMkr.GFldLtVlMhHxTLLgnPtHxTLLgndblFDt3ddblLtVlMhHxTLLgnPt.LtVlMhHxTLLgnPtNd.cc
Seg3D/src/StandAlone/convert/: CMakeLists.txt  ColorMapToText.cc  CurveFieldToText.cc  DenseMatrixToText.cc  HexVolFieldToExotxt.cc  HexVolFieldToText.cc  KnwToDenseMatrix.pl  MA2PointCloudVectors.cc  MtoTriSurfField.cc  PointCloudFieldToText.cc  QuadSurfFieldToText.cc  SampleHexTricubicHmt.cc  StructCurveFieldToText.cc  StructHexVolFieldToText.cc  StructQuadSurfFieldToText.cc  TetVolFieldToText.cc  TetgenToTetVol.cc  TextToColorMap.cc  TextToColumnMatrix.cc  TextToCurveField.cc  TextToDenseMatrix.cc  TextToHexTricubicHmt.cc  TextToHexVolField.cc  TextToPointCloudField.cc  TextToPointCloudString.cc  TextToQuadSurfField.cc  TextToSparseRowMatrix.cc  TextToStructCurveField.cc  TextToStructHexVolField.cc  TextToStructQuadSurfField.cc  TextToTetVolField.cc  TextToTriSurfField.cc  TriSurfFieldToExotxt.cc  TriSurfFieldToText.cc  UCSDToHexVol.cc  UCSD_HO_edge_sfToHexVol.cc  VTKtoHexVolField.cc  VTKtoTriSurfField.cc  vff2nrrd.cc
Seg3D/src/StandAlone/utils/: CMakeLists.txt  GenerateMPMData.cc  OrientFaces.cc  PCA-example.cc  TestBasis.cc  UnitElementMesh.cc  sciconvert.cc
Seg3D/src/main/: CMakeLists.txt  main.cc  sci_version.h  scirunremote.cc
Seg3D/src/sr_py/: CMakeLists.txt  api.cc  api.h  sr_py.i  sr_py.py
src/StandAlone/Apps/Seg3D/: BrushFloodFill.cc  BrushFloodFill.h  BrushTool.cc  CLUTLevelsTool.cc  CMakeLists.txt  CropTool.cc  CropTool.h  ExampleFilterPlugin.cc  ExamplePlugin.cc  FilterPlugin.h  FloodFillCopyTool.cc  FloodFillCopyTool.h  FloodfillTool.cc  FloodfillTool.h  GenericPlugin.h  ITKBinaryDilateErodeImageFilterTool.cc  ITKBinaryDilateErodeImageFilterTool.h  ITKConfidenceConnectedImageFilterTool.h  ITKDiscreteGaussianImageFilterTool.cc  ITKGradientMagnitudeImageFilterTool.h  ITKHoleFillImageFilterTool.cc  ITKHoleFillImageFilterTool.h  ITKNeighborhoodConnectedImageFilterTool.cc  ITKNeighborhoodConnectedImageFilterTool.h  ITKOtsuImageFilterTool.cc  ITKOtsuImageFilterTool.h  ITKThresholdImageFilterTool.cc  ITKThresholdSegmentationLevelSetImageFilterTool.cc  ITKThresholdSegmentationLevelSetImageFilterTool.h  KeyToolSelectorTool.cc  KeyToolSelectorTool.h  LayerButton.cc  LayerButton.h  NrrdVolume.cc  NrrdVolume.h  Painter.cc  Painter.h  PainterSignalTargets.cc  PanTool.h  PointerToolSelectorTool.cc  (+25 more)
src/StaticHelper/: CMakeLists.txt  ExtractSymbolsFromXML.cc  LoaderShared.cc
src/Testing/: CMakeLists.txt  TestRegressionImages.cc
src/Testing/Core/Containers/: CMakeLists.txt
utils/: CMakeLists.txt  nrrdchunk.cc  nrrdchunkbin.cc  nrrdcrop.cc  nrrdmmap.cc
(+2992 files in other folders)
